# flow-error

./: CMakeLists.txt  MCErrHist.m  bezierfit.m  bezierfit1.m  bezierfitQuintic.m  bezierfitcubic.m  bezierfitquartic.m  bspline-interp.m  compare_truth.m  compute_std.m  compute_trace_curvature.m  convex.h  cubefit_endpoint.m  downsampling.m  dump_scalar.m  err_correlation.m  err_correlation1.m  err_distribution.m  example1.m  example2.m  example3.m  flow_error.cpp  flow_error.m  flow_error_test.cpp  gen_2d.m  gen_result.m  gen_seed.m  hermite.m  insitu_pathline.cpp  merge_error.cpp  my_xticklabels.m  mychi2.m  mycolormap.m  normality_search.m  normality_test.m  normality_test0.m  normality_test1.m  online_quad_bezier_fit.h  pathdef.m  pathline_loader.m  (+27 more)
